# EVA_Show-Case

./: LICENSE  README.md
src/demo/cookie-inspection/: README.md  install.sh  requirements.txt  run.sh  showcase3-onnx.pygraph
src/demo/geofence/: README.md  install.sh  requirements.txt  run.sh  showcase1-mobilenetssdv2.pygraph  showcase1-yolov3.pygraph  showcase1.pygraph
src/demo/geofence/windows/: adlink-mobilenetSSDv2-geo-fencing-label.txt  alert-def-area-geo.txt  install-win.bat  run-win.bat
src/demo/part-assembly/: README.md  install.sh  run-combination.sh  run.sh  showcase5-combination.pygraph  showcase5.pygraph
src/demo/part-preparation/: README.md  install.sh  requirements.txt  run.sh  showcase4.pygraph
src/demo/toolkit/: README.md  install.sh  run.sh  showcase6.pygraph
src/demo/weardetection/: README.md  install.sh  requirements.txt  run.sh  showcase2-mobilenetssdv2.pygraph  showcase2-yolov3.pygraph  showcase2.pygraph
src/demo/weardetection/windows/: install-win.bat  run-win.bat
src/plugins/alert/email/: emailAlert-build.bat  emailAlert-build.sh  emailAlert.py
src/plugins/alert/voice/: voiceAlert-build.bat  voiceAlert-build.sh  voiceAlert.py
src/plugins/assembly/: assembly-build.sh  gstassembly.cpp  gstpartassembly.cpp  gstpartassembly.h  gstpartpreparation.cpp  gstpartpreparation.h  meson.build
src/plugins/assembly/assembly_utils/: Status.cpp  Status.h
src/plugins/geofence/: geofence-build.bat  geofence-build.sh  gstgeofence.cpp  gstgeofencebase.cpp  gstgeofencebase.h  gstgeofencefoot.cpp  gstgeofencefoot.h  meson.build  meson_options.txt
src/plugins/graphite-anomaly/: graphiteanomaly-build.sh  gstcrack.cpp  gstcrack.h  gstdrop.cpp  gstdrop.h  gstgraphiteanomaly.cpp  meson.build
src/plugins/toolkit/: gsttoolkit.cpp  gsttoolkit.h  gstweardetection.h  meson.build  toolkit-build.sh
src/plugins/weardetection/: gstweardetection.cpp  gstweardetection.h  meson.build  weardetection-build.bat  weardetection-build.sh
src/scripts/: optimize_ssd_mobilenet.bat  optimize_ssd_mobilenet.sh  optimize_yolov3.bat  optimize_yolov3.sh
src/utils/: utils.cpp  utils.h
